# tinker

learning-copilot/: .env.example  .gitignore  INSTALL.md  README.md  TODO.md  app.py  app_v2.py  pyproject.toml  requirements.txt  setup.sh  test_api.py
learning-copilot/backend/: ai_engine.py  curriculum.py  database.py
learning-copilot/components/: experiment_journal.py  karpathy_wisdom.py  tiny_wins.py
learning-copilot/prompts/: curriculum_gen.py  karpathy_mode.py
learning-copilot/static/: style.css  style_minimal.css
learning-copilot/utils/: file_handlers.py  github_fetcher.py
